--- a/style.css
+++ b/style.css
@@ -651,6 +651,7 @@ button.shiny-button {
   padding: 10px;
   letter-spacing: 4px;
   width: 100%;
+  border: none;
 }
 form {
   padding-bottom: 5px;
@@ -1038,6 +1039,10 @@ h3 {
   font-size: smaller;
     
 }
+/* video{
+  width: 400px;
+  height: 300px;
+} */
 
 @media only screen and (max-width:768px) and (min-width:300px){
   .heading-containar {
@@ -1097,8 +1102,11 @@ h3 {
 }
 video {
   height: 350px;
-  width: 200px;
+  width: 150px;
   object-fit: contain;
+}
+.figca1 {
+  width: 120px;
 }
 .big-image {
   flex-direction: column;
@@ -1137,7 +1145,7 @@ video {
 
 }
 
-@media only screen and (max-width:992px) and (min-width:768px){
+@media only screen and (max-width:992px) and (min-width:769px){
 
   .class-a-1 {
     width: 35%;
@@ -1178,7 +1186,7 @@ video {
 
 
 
-@media only screen and (max-width:1400px) and (min-width:1024px){
+@media only screen and (max-width:1400px) and (min-width:1025px){
 .video{
   justify-content: flex-start;
 }
