--- a/style.css
+++ b/style.css
@@ -863,6 +863,7 @@ input[type="radio"] {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
+  justify-content: center;
   /* justify-content: space-around; */
 }
 .top {
@@ -1016,12 +1017,13 @@ h3 {
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 190px;
+    height: 220px;
 }
 
 .full-img {
   /* height: 275px; */
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 3%;
